force-app/main/default/objects/PS_ASU_SP_ACAD_ADV__x/PS_ASU_SP_ACAD_ADV__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1V7z7CxEe0bWg2C-3-75GWC8rnJabHEs7BCH_oXhyUWI/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SP_ACAD_ADVs</externalName>
    <label>Academic Advisor (external)</label>
    <pluralLabel>Academic Advisor (external)</pluralLabel>
</CustomObject>