force-app/main/default/objects/PS_ASU_SP_ACAD_ADV__x/fields/EMAIL_ADDR__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ADDR__c</fullName>
    <description>Data sourced from PS_EMAIL_ADDRESSES.EMAIL_ADDR</description>
    <externalDeveloperName>EMAIL_ADDR</externalDeveloperName>
    <label>Advisor Email Address</label>
    <type>Email</type>
</CustomField>