force-app/main/default/objects/PS_ASU_SP_ACAD_ADV__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_STDNT_ADVR_HIST.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Academic Advisor (external)</relationshipLabel>
    <relationshipName>Academic_Advisor_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>