force-app/main/default/objects/PS_ASU_SP_ACAD_ADV__x/fields/NAME_DISPLAY__c.field-meta.xml
<CustomField>
    <fullName>NAME_DISPLAY__c</fullName>
    <description>Data sourced from PS_HCR_PERSON_NM_I.NAME_DISPLAY</description>
    <externalDeveloperName>NAME_DISPLAY</externalDeveloperName>
    <label>Advisor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>