force-app/main/default/objects/PS_ASU_SP_ACAD_ADV__x/fields/PHONE__c.field-meta.xml
<CustomField>
    <fullName>PHONE__c</fullName>
    <description>Data sourced from PS_PERSONAL_PHONE.PHONE</description>
    <externalDeveloperName>PHONE</externalDeveloperName>
    <label>Advisor Phone</label>
    <type>Phone</type>
</CustomField>